--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
          <img src="images/ico.bmp" style="width:100px;margin-top: 0;margin-left: 10px;"></div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#banner">Inicio</a></li>
-          <li><a href="#work">Trabajos</a></li>
-          <li><a href="#services">Servicios</a></li>
-          <li><a href="#about">Ubicación</a></li>
-          <li><a href="#contact">Contacto</a></li>
+          <li class="active"><a href="#banner">INICIO</a></li>
+          <li><a href="#services">CLASES</a></li>
+          <li><a href="#about">UBICACION</a></li>
+          <li><a href="#contact">CONTACTO</a></li>
         </ul>
       </div>
     </div>
