--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
       <div class="col-md-12">
         <div class="text-center">
           <h3 style="margin-bottom: 10;">Ubicación</h3>
-          <p> <i class="fa fa-map-marker" aria-hidden="true"></i> Necochea, Diagonal San Martin Nº 1471</p>
+          <p> <i class="fa fa-map-marker" aria-hidden="true"></i> Necochea Calle 61 Nº 2972.</p>
+	  <p>Segundo piso, entre 66 y 64. Galería huracán</p>
         </div>
      </div>
       <div class="col-12">
