--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <div class="col-md-4">
       </div>
     </div>
-          <span style="color: white;"><span class="copyright">Copyright &copy; MMA FITNESS NECOCHEA</span> 2021</span>
+          <span style="color: white;"><span class="copyright">Copyright &copy; MMAFitness NECOCHEA</span> 2021</span>
   </div>
   <a href="https://api.whatsapp.com/send?phone=5492262495716&text=Buenas,%20tengo%20una%20consulta%20" class="btn-flotante"><img class="img-responsive d-sm-none" src="images/w1.png" style="width:115px"></a>
 </footer>
