--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
         <h3>¿De que eres capaz?</h3>
         <div class="row">
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a > <img class="img-portfolio img-responsive" src="images/portfolio-1.jpg"> </a> </div>
+            <div class="portfolio-item"> <a > <img class="img-portfolio img-responsive" src="https://i.ibb.co/zZMnFRS/154874622-452428095807052-2670132136905098125-n.jpg"> </a> </div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a > <img class="img-portfolio img-responsive" src="images/portfolio-2.jpg"> </a> </div>
+            <div class="portfolio-item"> <a > <img class="img-portfolio img-responsive" src="https://i.ibb.co/MDMhSkR/154981697-131340118900517-6846143509752693554-n.jpg"> </a> </div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a > <img class="img-portfolio img-responsive" src="images/portfolio-3.jpg"> </a> </div>
+            <div class="portfolio-item"> <a > <img class="img-portfolio img-responsive" src="https://i.ibb.co/F4TbNjz/156411360-445542026596903-2773872276018788008-n.jpg"> </a> </div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a > <img class="img-portfolio img-responsive" src="images/portfolio-4.jpg"> </a> </div>
+            <div class="portfolio-item"> <a > <img class="img-portfolio img-responsive" src="https://i.ibb.co/HxvNCym/157214268-433618734392032-5107225952302489188-n.jpg"> </a> </div>
           </div>
         </div>
         <!-- /.row (nested) --> 
